--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,7 +24,7 @@ layout: default
   
   <hr class="post-separation"/>
   <script src="https://utteranc.es/client.js"
-        repo="wlroh/wlroh.github.io"
+        repo="im-gnar/im-gnar.github.io"
         issue-term="pathname"
         label="comments"
         theme="github-dark"
