Fix: Add navigation.js for post link functionality

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -190,6 +190,8 @@
   </script>
   {%- endif -%}
 
+  <script type="text/javascript" src="{{ "/assets/js/navigation.js" | relative_url }}"></script>
+
   {% if site.plainwhite.search %}
   <script src="{{ "/assets/js/simple-jekyll-search.min.js" | relative_url }}"></script>
   <script src="{{ "/assets/js/search.js" | relative_url }}"></script>
